Added ignoring of sun.misc related warnings Fixed Intellij IDEA warnings